--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
     <head>
         <meta charset="utf-8">
 
-        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"></link>
-
-        <script type="text/javascript" src="node_modules/angular/angular.js"></script>
-        <script type="text/javascript" src="node_modules/angular-route/angular-route.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"></link>
         <script type="text/javascript" src="dist/bundle.js" charset="utf-8"></script>
     </head>
     <body ng-app="angular-es6">
