Updated blog post url, and added instil.co as href to demo logo.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body ng-app="angular-es6">
         <div class="container">
-            <img class="logo pull-right" src="images/instil-logo-header.png">
+            <img class="logo pull-right" src="images/instil-logo-header.png" href="instil.co">
         </div>
     	<div class="content" ng-view></div>
     </body>
